COMMON: (#1419)
- Update java options in pom file according to java8

Signed-off-by: qudongfang <qudongfang@gmail.com>