@@ -219,7 +219,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.16</version>
         <configuration>
-            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+            <argLine>-Xmx1024m -XX:MaxMetaspaceSize=256m</argLine>
             <reportsDirectory>../target/surefire-reports</reportsDirectory>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
         </configuration>
